# language-engine-witness

./: AGENTS.md  ARCHITECTURE.md  BOOTSTRAP_HANDOFF.md  Cargo.toml  NON_IDEAL_AGENTS.md  flake.nix
src/: lib.rs
tests/: e2e.rs
tests/fixtures/: PROVENANCE.md  second-min.schema  spirit-lock.toml
