[package]
name="language-engine-witness"
version="0.1.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/language-engine-witness"
description="Process-level acceptance witness for the minimal language engine"
[dependencies]
logos-engine={git="https://github.com/LiGoldragon/logos-engine.git",rev="55640060ec225f0ea47631fa53f60294f4284df5"}
name-table={git="https://github.com/LiGoldragon/name-table.git",rev="c3237f77c087e6feab49d6cf34971cebc14a11e6"}
nomos-engine={git="https://github.com/LiGoldragon/nomos-engine.git",rev="814d494d48bd3c104e40ed68cd8d652b42df6713"}
schema-engine={git="https://github.com/LiGoldragon/schema-engine.git",rev="9ba190dca112ca70c6383514793cc12e7913d488"}
sema-storage={git="https://github.com/LiGoldragon/sema-storage.git",rev="269953164460cd842c1f3f8c9c93e4afe1e3628e"}
signal-frame={git="https://github.com/LiGoldragon/signal-frame.git",rev="f46872e7e8edae5264c892443d415a273b231234",default-features=false}
signal-logos={git="https://github.com/LiGoldragon/signal-logos.git",rev="c248235c4adfea86b7754b7ce71b056bc90088b0"}
signal-nomos={git="https://github.com/LiGoldragon/signal-nomos.git",rev="2c09647bb08825806c1485ba11aca844d4b60fff"}
signal-schema={git="https://github.com/LiGoldragon/signal-schema.git",rev="bc68dc8fa1b16b00156ca36e2690fd77fda91a52"}
signal-sema-storage={git="https://github.com/LiGoldragon/signal-sema-storage.git",rev="31ab48608a3c2eab0733dcb16a3351251a70789d"}
rkyv={version="0.8",features=["bytecheck"]}
tokio={version="1",features=["macros","rt-multi-thread","net","io-util","time"]}
[dev-dependencies]
tempfile="3"
[patch."https://github.com/LiGoldragon/kameo.git?branch=main"]
kameo={git="https://github.com/LiGoldragon/kameo.git",rev="f491b45d7dcb55e5837eddde3d5d7ca8ceaa9f01"}
[patch."https://github.com/LiGoldragon/signal-frame.git?branch=main"]
signal-frame={git="https://github.com/LiGoldragon/signal-frame.git",rev="f46872e7e8edae5264c892443d415a273b231234"}
[lints.rust]
unsafe_code="forbid"
