[package]
name="language-engine-witness"
version="0.1.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/language-engine-witness"
description="Process-level acceptance witness for the minimal language engine"
[dependencies]
logos-engine={git="https://github.com/LiGoldragon/logos-engine.git",rev="64af15774b97c6e2ef59efe0416d97b5fb376059"}
name-table={git="https://github.com/LiGoldragon/protos.git",rev="7e60f60fbc144265cf5ac1ec238b87744967d4eb"}
nomos-engine={git="https://github.com/LiGoldragon/nomos-engine.git",rev="11c3d91111edf0b631b280385ee4d06289347a5e"}
schema-engine={git="https://github.com/LiGoldragon/schema-engine.git",rev="3547697b6fc74e2e0ad7cabc7be7aaa469077b3c"}
sema-storage={git="https://github.com/LiGoldragon/sema-storage.git",rev="11b22604df15351f1241e3bfd3d47bd9a1b4f362"}
signal-frame={git="https://github.com/LiGoldragon/signal-frame.git",rev="f46872e7e8edae5264c892443d415a273b231234",default-features=false}
signal-logos={git="https://github.com/LiGoldragon/signal-logos.git",rev="f7a88bec80a4857b9c1098ce24e0df9fc06dfefd"}
signal-nomos={git="https://github.com/LiGoldragon/signal-nomos.git",rev="f72d5983fcb2ba3bb7a99140ac812390e59d51ac"}
signal-schema={git="https://github.com/LiGoldragon/signal-schema.git",rev="d8aeae0814b026a8de6bf40e86432cb37d022762"}
signal-sema-storage={git="https://github.com/LiGoldragon/signal-sema-storage.git",rev="21c3ad78227ec847bda37cfa2494619cdf1b0b70"}
rkyv={version="0.8",features=["bytecheck"]}
tokio={version="1",features=["macros","rt-multi-thread","net","io-util","time"]}
[dev-dependencies]
tempfile="3"
[patch."https://github.com/LiGoldragon/kameo.git?branch=main"]
kameo={git="https://github.com/LiGoldragon/kameo.git",rev="f491b45d7dcb55e5837eddde3d5d7ca8ceaa9f01"}
[patch."https://github.com/LiGoldragon/signal-frame.git?branch=main"]
signal-frame={git="https://github.com/LiGoldragon/signal-frame.git",rev="f46872e7e8edae5264c892443d415a273b231234"}
[lints.rust]
unsafe_code="forbid"
